--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=ssdssd46
 keyPassword=ssdssd46
 keyAlias=tomercon
-storeFile=C:/Users/USER/androidkeys/tomercon.jks
+# storeFile=C:/Users/USER/androidkeys/tomercon.jks
