--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_fonts: ^2.1.1
   url_launcher: ^6.0.17
   flutter_paginator: ^0.0.6
+  # firebase_core : ^0.5.0
     
 dev_dependencies:
   flutter_test:
